test/types/records/split-init/error-never-initialized-values-global4.good
error-never-initialized-values-global4.chpl:3: error: Cannot default-initialize a variable with generic type
error-never-initialized-values-global4.chpl:3: note: 'qq' has generic type 'C?'
error-never-initialized-values-global4.chpl:3: note: 'C?' now means nilable class with any management
error-never-initialized-values-global4.chpl:3: note: to migrate old code, change it to 'borrowed C?'
